Change colors in custom theme

--- a/sites/all/themes/multipurpose_sub_theme/my_zymphonies.css
+++ b/sites/all/themes/multipurpose_sub_theme/my_zymphonies.css
@@ -8,3 +8,19 @@
 .nivo-controlNav {
   display: none;
 }*/
+
+body {
+  background-color: #CCC;
+}
+
+.footer_credit {
+  background-color: #FF6666;
+}
+
+a {
+  color: #FF6666;
+}
+
+#main-menu li a.active {
+  border-bottom: 2px solid #FF6666;
+}
